[gd_scene load_steps=14 format=2]

[ext_resource path="res://code/scenes/scenarioGuy.gd" type="Script" id=1]
[ext_resource path="res://sprites/section1/ngLogo.png" type="Texture" id=2]
[ext_resource path="res://sprites/section1/guy01.png" type="Texture" id=3]
[ext_resource path="res://fonts/Helvetica.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/section1/gameLogo.png" type="Texture" id=5]
[ext_resource path="res://audio/music/1077019_Jolly-Good-Show.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/sfx/select.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 33
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
autoplay = true

[node name="Timer" type="Timer" parent="."]

[node name="BG" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = -1.0
margin_right = 642.0
margin_bottom = 479.0
mouse_filter = 2

[node name="BGTween" type="Tween" parent="BG"]

[node name="Guy" type="Sprite" parent="BG"]
visible = false
position = Vector2( 320, 240 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="Voice" type="AudioStreamPlayer" parent="BG/Guy"]

[node name="Tween" type="Tween" parent="BG/Guy"]

[node name="Logo" type="Sprite" parent="BG"]
visible = false
position = Vector2( 320, 240 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="GameLogo" type="Sprite" parent="BG"]
visible = false
position = Vector2( 362, 240 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Buttons" type="Node2D" parent="."]
visible = false
position = Vector2( 474, 244 )

[node name="heck yeah" type="Button" parent="Buttons"]
margin_left = -84.0
margin_top = -52.0
margin_right = 86.0
margin_bottom = -4.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.705882, 0.266667, 0.266667, 1 )
custom_colors/font_color_focus = Color( 0.105882, 0.105882, 0.105882, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.105882, 0.105882, 0.105882, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "heck yeah"
icon_align = 1

[node name="fuck no" type="Button" parent="Buttons"]
margin_left = -84.0
margin_top = 3.0
margin_right = 86.0
margin_bottom = 51.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.105882, 0.105882, 0.105882, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.105882, 0.105882, 0.105882, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "fuck no"
icon_align = 1

[node name="SFX" type="AudioStreamPlayer" parent="Buttons"]
stream = ExtResource( 7 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Buttons/heck yeah" to="." method="_on_heck_yeah_pressed"]
[connection signal="pressed" from="Buttons/fuck no" to="." method="_on_fuck_no_pressed"]
